src/test/ui/parser/pat-lt-bracket-3.stderr
error: expected one of `=>`, `@`, `if`, or `|`, found `<`
  --> $DIR/pat-lt-bracket-3.rs:18:16
   |
LL |             Foo<T>(x, y) => {
   |                ^ expected one of `=>`, `@`, `if`, or `|` here

error: aborting due to previous error

